<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculation.activities.PemupukanActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/tv_first_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/tujuan_pemupukan"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_pupuk_first"/>
        <TextView
            android:id="@+id/tv_pupuk_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_pupuk_first"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_second_title_pupuk"
            android:text="@string/manfaat_pemupukan"
            />
        <TextView
            android:id="@+id/tv_second_title_pupuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_pupuk_first"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/aturan_pemupukan_title"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/tv_pupuk_first"/>
        <TextView
            android:id="@+id/tv_pupuk_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_second_title_pupuk"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/aturan_pemupukan"
            />
        <TextView
            android:id="@+id/pupuk_hitung_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_pupuk_second"
            app:layout_constraintBottom_toTopOf="@id/ed_pupuk_first"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/pupuk_tv_title"
            android:textColor="@color/colorPrimary"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_pupuk_first"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pupuk_hitung_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ed_pupuk_second"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pupuk_first_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_pupuk_second"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/ed_pupuk_first"
            app:layout_constraintTop_toBottomOf="@id/pupuk_hitung_title"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:hint="@string/m_kedalaman_kolam"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pupuk_second_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_count_pupuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_pupuk_second"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/hitung"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tv_result_pupuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toRightOf="@id/btn_count_pupuk"
            app:layout_constraintTop_toBottomOf="@id/ed_pupuk_second"
            tools:text="50 kilogram"
            android:textColor="@android:color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
