<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculation.activities.PpmActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/tv_ppm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/apa_itu_ppm"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_ppm_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_ppm_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/ppm_desc"
            android:layout_marginTop="4dp"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/contoh_ppm"
            app:layout_constraintTop_toBottomOf="@id/tv_ppm_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="2dp"
            android:layout_margin="8dp"
            app:strokeColor="@color/colorPrimary"
            android:padding="8dp"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/contoh_ppm"/>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:id="@+id/ppm_hitung_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contoh_ppm"
            app:layout_constraintBottom_toTopOf="@id/ed_ppm_first"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/simulasi_ppm_title"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_ppm_first"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ppm_hitung_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ed_ppm_second"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ppm_first_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_ppm_second"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/ed_ppm_first"
            app:layout_constraintTop_toBottomOf="@id/ppm_hitung_title"
            app:layout_constraintRight_toLeftOf="@id/ed_ppm_third"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:hint="@string/m_kedalaman_kolam"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ppm_second_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_ppm_third"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/ed_ppm_second"
            app:layout_constraintTop_toBottomOf="@id/ppm_hitung_title"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:hint="@string/dosis_ppm"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ppm_third_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_count_ppm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_ppm_second"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/hitung"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tv_result_ppm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toRightOf="@id/btn_count_ppm"
            app:layout_constraintTop_toBottomOf="@id/ed_ppm_second"
            tools:text="50 kilogram"
            android:textColor="@android:color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
