<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculation.activities.PengapuranActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cara"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/first_ed"
            app:strokeWidth="2dp"
            android:layout_margin="8dp"
            app:strokeColor="@color/colorPrimary"
            android:padding="8dp"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/cara_ukur_ph_tanah_pada_beberapa_titik_yang_berbeda_menggunakan_alat_ukur_ph_ph_soil_tester"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_ed"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cara"
            app:layout_constraintRight_toLeftOf="@id/second_ed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:hint="@string/ph">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_ed"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/first_ed"
            app:layout_constraintTop_toBottomOf="@id/cara"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/second_ed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"
            android:text="@string/hitung"/>
        <TextView
            android:id="@+id/tv_second_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_first_left_result"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            android:text="Alternatif pengapuran menggunakan kapur pertanian (CaCO3) :"/>

        <TextView
            android:id="@+id/tv_second_left_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_second_result_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            tools:text="2 - "
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_second_right_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_second_result_title"
            app:layout_constraintStart_toEndOf="@id/tv_second_left_result"
            android:layout_margin="8dp"
            tools:text="4 kilogram"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_first_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_count"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            android:text="Dosis Kapur Tohor (CaO) yang tepat untuk menetralisir pH tanah :"/>

        <TextView
            android:id="@+id/tv_first_left_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_first_result_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            tools:text="2 - "
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_first_right_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_first_result_title"
            app:layout_constraintStart_toEndOf="@id/tv_first_left_result"
            android:layout_margin="8dp"
            tools:text="4 kilogram"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_second_left_result"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:paddingTop="8dp"
            android:text="@string/manfaat_pengapuran_title"/>
        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note_title"
            android:paddingStart="16dp"
            android:paddingTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
